[fix] Fix unit test (because data xml changed)